--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "main": "dist/app.js",
   "scripts": {
     "build": "tsc",
-    "start": "node ./dist/app.js",
-    "dev": "concurrently \"npm run build:watch\" \"npm run start\"",
-    "build:watch": "tsc -w"
+    "start": "cross-env NODE_ENV=production node ./dist/app.js",
+    "dev": "concurrently \"npm run build:watch\" \"npm run serve\"",
+    "serve": "cross-env NODE_ENV=development nodemon ./dist/app.js",
+    "build:watch": "tsc -w",
+    "start:prod": "npm run build && cross-env NODE_ENV=production node ./dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.12.6",
+    "@orbs-network/ton-access": "^2.3.3",
+    "@toncodex/sdk": "^1.0.33-testnet",
     "dotenv": "^16.4.7",
+    "i": "^0.3.7",
     "nodemon": "^3.1.9",
+    "npm": "^11.0.0",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
@@ -23,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
     "eslint": "^9.18.0",
     "typescript": "^5.7.3"
   }
