[main] i have problems with uploading to aws due to aws sdk

--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@apollo/client": "^3.12.6",
     "@aws-sdk/client-s3": "^3.741.0",
     "@aws-sdk/s3-request-presigner": "^3.741.0",
+    "@aws-sdk/types": "^3.734.0",
     "@orbs-network/ton-access": "^2.3.3",
     "@toncodex/sdk": "^1.0.33-testnet",
     "aws-sdk": "^2.1692.0",
     "dotenv": "^16.4.7",
     "i": "^0.3.7",
     "nodemon": "^3.1.9",
-    "npm": "^11.0.0",
+    "npm": "^11.1.0",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
