[main] installed types, changed tsconfig.json

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.4",
     "@types/dotenv": "^8.2.3",
     "@types/node": "^22.10.6",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
