--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "i": "^0.3.7",
     "nodemon": "^3.1.9",
     "npm": "^11.1.0",
+    "react": "^19.0.0",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
